﻿更新履歴

==== Ver 1.1.0-beta1(2013/xx/xx)
 * NEW: タブの表示位置を画面上部に変更可能に (thx @aokomoriuta!)
 * NEW: mobile.twitter.com/<スクリーン名>/status/<ステータスID> のURLも関連発言表示の対象に追加
 * NEW: Favstarなどサードパーティ製サービスのパーマリンクURLも関連発言表示の対象に追加
 * FIX: スペースが含まれているURLをブラウザで開こうとするとURLが分断されて複数のタブが開いてしまう問題を修正 (thx @5px!)
 * FIX: 画面更新時にInvalidOperationExceptionのエラーが発生する不具合を修正
 * FIX: 関連発言表示が非公開アカウントのツイートに対して機能しない問題を修正

==== Ver 1.0.9(2013/04/07)
 * CHG: APIレートリミット関連の実装を修正
 * FIX: アイコンキャッシュの破棄時にエラーが出ることがある問題を修正
 * FIX: UserStreamsのunfollowイベントでエラーが起きていたのを修正
 * FIX: プロフィール画像・サムネイルの表示切り替え時にエラーが起きる場合がある問題を修正
 * FIX: タイムライン上のアイコンが空白のまま表示されない場合がある問題を修正 (thx @5px!)
 * FIX: アカウント追加時の初回認証に失敗する問題を修正 (thx @polka_roco_!)
 * FIX: ツールバー上のAPIレートリミット表示が正しく動作しなくなった問題を修正
 * FIX: ツイタマなど一部のTwitterクライアントから投稿されたツイートの改行が正しく表示されない問題を修正 (thx @ohta8801, @kossetsu_inryo!)
 * FIX: プロフィール編集画面で入力した <, > などの記号が保持されない問題を修正 (thx @cn!)

==== Ver 1.0.9-beta1(2013/02/08)
 * ベータ版です
 * 使用中に不具合が起きた場合は #OpenTween かメールで遠慮なく報告して下さい

 * NEW: .NET Framework 4.0 Client Profile での動作に対応 (今後Full版のインストールは不要になります)
 * NEW: メニューに Twitter API の稼働状況ページへのリンクを追加
 * CHG: アイコンのキャッシュ機構を全面的に書き直し
 * CHG: アイコンの取得先をHTTPSを使用するURLに変更
 * FIX: 96dpiの環境で発言詳細欄のアイコンが等倍に表示されるようにサイズ調整 (thx @5px!)
 * FIX: サムネイル表示の2枚目以降の画像が正しいサイズで表示されない不具合を修正
 * FIX: 発言詳細欄に表示したツイートに含まれるURLへ無差別にHEADリクエストを飛ばす問題を修正
 * FIX: 言語設定が英語の状態でコンテキストメニューの「削除 (&D)」が翻訳されずに表示される問題を修正

==== Ver 1.0.8(2013/01/21)
 * v1.0.7 のみに存在する、アニメーションGifのサムネイル表示に関連した重要な修正を含んでいます

 * FIX: http://m.tbs.jp/tv/ で始まるURLを含むツイートを開くと発生するエラーの対策 (thx @WhiteWeathercoc!)
 * FIX: ディスプレイ設定が96dpiの環境で発言詳細欄のアイコンが正方形に表示されない不具合の修正 (thx @5px!)
 * FIX: PublicSearch利用時に発生することのあるエラーの対策
 * FIX: アニメーションGifを使用した画像をサムネイル表示すると表示が壊れる問題の修正 (thx @hama_kai!)

==== Ver 1.0.7(2013/01/19)
 * NEW: img.azyobuzi.net を使用したサムネイル表示に対応
 * CHG: 検索APIをATOMからJSONに移行 (thx @re4k, @5px!)
 * CHG: サムネイル表示を大幅に書き直し
 * FIX: ID振り分けルール作成時にエラーが起きる問題を修正 (thx @tadsan!)

==== Ver 1.0.6(2012/09/04)
 * NEW: TUNA.BE のサムネイル表示に対応