@@ -30,6 +30,7 @@ using System.Runtime.InteropServices;
 using System.Reflection;
 using System.Windows.Forms;
 using System.Runtime.Serialization;
+using System.IO;
 
 namespace OpenTween
 {
@@ -206,6 +207,16 @@ namespace OpenTween
         public void GetStatusUrlTest2(string screenName, long statusId, string except)
         {
             Assert.That(MyCommon.GetStatusUrl(screenName, statusId), Is.EqualTo(except));
+        }
+
+        [Test]
+        public void GetErrorLogPathTest()
+        {
+            var mockAssembly = Substitute.For<_Assembly>();
+            mockAssembly.Location.Returns(@"C:\hogehoge\OpenTween\OpenTween.exe");
+            MyCommon.EntryAssembly = mockAssembly;
+
+            Assert.That(MyCommon.GetErrorLogPath(), Is.SamePath(@"C:\hogehoge\OpenTween\ErrorLogs\"));
         }
     }
 }
